<resources>
    <string name="app_name">YouShare</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error">Error</string>
    <string name="error_format">[Error] %s</string>

    <string name="action_settings">Settings</string>
    <string name="add_new_event">+</string>
    <string name="avatar">avatar</string>
    <string name="user_name">Имя</string>
    <string name="user_username">Фамилия</string>
    <string name="connection_to_google_play_failed">Не удалось подключиться к Play сервисам.</string>
    <string name="not_signed_in">Не удалось войти</string>
    <string name="startingEvent">Начало трансляции. Пожалуйста, подождите…</string>
    <string name="you_need_be_plus_users">Вы должны быть пользователем Google+</string>
    <string name="loadingEvents">Загрузка мероприятий. Пожалуйста, подождите…</string>
    <string name="no_videos_to_show_here_">У Вас еще нет запланированных мероприятий.</string>
    <string name="videoThumbnail">video thumbnail</string>
    <string name="creatingEvent">Мероприятие создается. Пожлалуйста, подождите…</string>
    <string name="privacy_public">Открытый доступ</string>
    <string name="privacy_unlisted">Доступ по ссылке</string>
    <string name="privacy_private">Ограниченный доступ</string>
    <string name="event_description">Описание</string>
    <string name="event_title">Название</string>
    <string name="submit_crate_new_event">Создать</string>
    <string name="cancel_crate_new_event">Отменить</string>
    <string name="enter_event_name">Введите название мероприятия</string>
    <string name="chose_privacy_event">Выберите тип доступа к видео</string>
    <string name="endingEvent">Конец трансляции. Пожалуйста, подождите…</string>
    <string name="streamingOff">Пауза</string>
    <string name="streamingOn">Начать трансляцию</string>
    <string name="endEvent">Закончить трансляцию</string>
    <string name="faild_to_end_the_event">Не удалось завершить трансляцию</string>

</resources>
