<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ifmo.youshare.NewEventSettingsActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="2dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_title" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="59dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_description" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RadioButton
            android:id="@+id/privacy_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_public"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="126dp" />

        <RadioButton
            android:id="@+id/privacy_unlisted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_unlisted"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="126dp" />

        <RadioButton
            android:id="@+id/privacy_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_private"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="126dp" />
    </RadioGroup>

</LinearLayout>
